# P2rent

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml
src/: chunk.rs  crypto.rs  error.rs  lib.rs  main.rs  manifest.rs  protocol.rs  scanner.rs  storage.rs  sync.rs
src/net/: protocol.rs  quic.rs
test/: chunk_storage.rs  crypto_keys.rs  quic_fetch.rs
tests/: chunk_storage.rs  crypto_keys.rs  quic_fetch.rs
