[package]
name = "p2rent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
blake3 = "1.8.2"
dirs = "6.0.0"
ed25519-dalek = "2.2.0"
fs = "0.0.5"
rand = "0.9.2"
rand_core = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
walkdir = "2.5.0"
