[package]
name = "p2rent"
version = "0.1.0"
edition = "2024"
description = "Blazing-fast peer-to-peer file sharing over QUIC"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
bincode = "1.3"
blake3 = "1.8.2"
clap = { version = "4.5.18", features = ["derive"] }
dialoguer = "0.11.0"
dirs = "6.0.0"
ed25519-dalek = "2.2.0"
indicatif = "0.17.8"
quinn = { version = "0.11.9", features = ["rustls"] }
rand = "0.9.2"
rand_core = "0.9.3"
rayon = "1.10.0"
rcgen = "0.14.3"
rustls = "0.22.4"
rustls-pki-types = "1.12.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tempfile = "3.10.1"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
walkdir = "2.5.0"
